agregando seo y sass2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Veni a disfrutar del mejor café y muchas cosas ricas en el pinar, canelones">
+	<meta name="keywords" content="cafe, brunch, pinar, sundari, merienda, almuerzo, gourmet, cafeteria, comida, canelones, uruguay, silvestre">
 	<title>Silvestre</title>
 	<!-- MI CSS -->
 	<link rel="stylesheet" href="css/estilo.css">
@@ -27,9 +29,10 @@
 	</div>
 	<footer>
 		<p>Todos los derechos reservados</p>
-		<div class="redes">
-			<h4>FACEBOOK</h4>
-			<h4>INSTAGRAM</h4>
+		<div>
+			<h4 class= "redes">PRUEBA BOTON</h4>
+			<h4 class="redes-fb">FACEBOOK</h4>
+			<h4 class="redes-ins">INSTAGRAM</h4>
 		</div>
 	</footer>
 </body>
